# Izbrani-Algoritmi

./: README.md
IA-N1/: CMakeLists.txt  README.md  main.cpp
IA-N2/: CMakeLists.txt  Miller-Rabin.cpp  Miller-Rabin.h  README.md  bigint.cpp  bigint.h  main.cpp  porocilo.txt
IA-N3/: CMakeLists.txt  README.md  main.cpp
IA-N4/: README.md  main.py  test.py  testSimplex2.txt
